[FIX] bugs.